Fixed variables, chat color and overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,4 +73,5 @@ button:active {
     padding: .5em;
     height: 150px;
     width: 300px;
+    overflow: auto;
 }
